# audio_common

./: Dockerfile  README.md  README_8md.html  annotated.html  audio__capturer__main_8cpp.html  audio__capturer__main_8cpp__incl.map  audio__capturer__node_8cpp.html  audio__capturer__node_8cpp__incl.md5  audio__capturer__node_8hpp.html  audio__capturer__node_8hpp__incl.map  audio__capturer__node_8hpp__incl.md5  audio__capturer__node_8hpp_source.html  audio__player__main_8cpp.html  audio__player__node_8cpp.html  audio__player__node_8cpp__incl.md5  audio__player__node_8hpp.html  audio__player__node_8hpp__incl.md5  audio__player__node_8hpp_source.html  classaudio__common_1_1AudioCapturerNode-members.html  classaudio__common_1_1AudioCapturerNode.html  classaudio__common_1_1AudioCapturerNode__coll__graph.map  classaudio__common_1_1AudioCapturerNode__inherit__graph.map  classaudio__common_1_1AudioPlayerNode-members.html  classaudio__common_1_1AudioPlayerNode.html  classaudio__common_1_1AudioPlayerNode__coll__graph.map  classaudio__common_1_1AudioPlayerNode__coll__graph.md5  classaudio__common_1_1MusicNode-members.html  classaudio__common_1_1MusicNode.html  classaudio__common_1_1MusicNode__inherit__graph.map  classaudio__common_1_1TtsNode-members.html  classaudio__common_1_1TtsNode.html  classaudio__common_1_1TtsNode__coll__graph.map  classaudio__common_1_1TtsNode__coll__graph.md5  classaudio__common_1_1WaveFile-members.html  classaudio__common_1_1WaveFile.html  classaudio__common_1_1WaveFile__coll__graph.md5  classes.html  dir_000002_000003.html  dir_000004_000003.html  dir_2c45bd1a212455e846b5c30b37c37495.html  (+42 more)
.github/: Doxyfile
4.0.10/: README_8md.html  annotated.html  audio__capturer__node_8cpp.html  audio__capturer__node_8hpp__dep__incl.map  audio__capturer__node_8hpp_source.html  audio__player__main_8cpp.html  audio__player__main_8cpp__incl.map  audio__player__main_8cpp__incl.md5  audio__player__node_8cpp.html  audio__player__node_8hpp.html  audio__player__node_8hpp__incl.map  audio__player__node_8hpp_source.html  classaudio__common_1_1AudioCapturerNode.html  classaudio__common_1_1AudioCapturerNode__coll__graph.md5  classaudio__common_1_1AudioCapturerNode__inherit__graph.map  classaudio__common_1_1AudioCapturerNode__inherit__graph.md5  classaudio__common_1_1AudioPlayerNode__coll__graph.md5  classaudio__common_1_1AudioPlayerNode__inherit__graph.md5  classaudio__common_1_1MusicNode-members.html  classaudio__common_1_1MusicNode.html  classaudio__common_1_1MusicNode__coll__graph.map  classaudio__common_1_1MusicNode__inherit__graph.map  classaudio__common_1_1WaveFile.html  classes.html  dir_000004_000003.html  dir_2c45bd1a212455e846b5c30b37c37495.html  dir_7f213c8322589f7e99927c16a0a70cfc.html  dir_7f213c8322589f7e99927c16a0a70cfc_dep.md5  dir_d3edf87610078f6ce4bd4e1879c3fe8b.html  dir_f3218d5407c9fce5f78096e7193d4e82.html  doxygen_crawl.html  functions_func.html  functions_type.html  functions_vars.html  globals_func.html  graph_legend.html  index.html  inherit_graph_0.md5  inherit_graph_1.map  music__main_8cpp.html  (+20 more)
4.0.5/: annotated.html  audio__capturer__node_8cpp.html  audio__player__node_8cpp__incl.map  audio__player__node_8hpp__dep__incl.md5  classaudio__common_1_1MusicNode__inherit__graph.md5  classaudio__common_1_1WaveFile__coll__graph.map  dir_d3edf87610078f6ce4bd4e1879c3fe8b_dep.map  doxygen_crawl.html  files.html  index.html  inherit_graph_0.md5  music__node_8cpp__incl.map  tts__node_8hpp__incl.map  wave__file_8hpp_source.html
4.0.6/: audio__capturer__main_8cpp.html  audio__capturer__node_8cpp__incl.map  classaudio__common_1_1AudioCapturerNode__coll__graph.md5  classaudio__common_1_1AudioPlayerNode-members.html  classaudio__common_1_1AudioPlayerNode__inherit__graph.md5  classaudio__common_1_1MusicNode__coll__graph.md5  classaudio__common_1_1TtsNode__inherit__graph.map  classaudio__common_1_1TtsNode__inherit__graph.md5  dir_d3edf87610078f6ce4bd4e1879c3fe8b.html  functions.html  music__main_8cpp__incl.md5  namespaces.html  tts__main_8cpp.html  tts__node_8hpp__incl.md5  wave__file_8hpp.html
4.0.7/: audio__capturer__node_8hpp__dep__incl.md5  audio__player__node_8hpp__dep__incl.map  classaudio__common_1_1AudioCapturerNode__inherit__graph.md5  classaudio__common_1_1MusicNode__coll__graph.map  dir_2c45bd1a212455e846b5c30b37c37495_dep.md5  dir_7f213c8322589f7e99927c16a0a70cfc.html  dir_95b8e30b61eddecaf02778545fbbe120_dep.md5  dir_f3218d5407c9fce5f78096e7193d4e82_dep.md5  menudata.js
4.0.8/: audio__player__node_8hpp_source.html  classaudio__common_1_1AudioCapturerNode-members.html  classaudio__common_1_1AudioPlayerNode__inherit__graph.map  classes.html  (+9 more)
audio_capture/: CMakeLists.txt  package.xml
audio_capture/audio_capture/: audio_capturer.py  audio_player.py  otro.py
audio_common/: CMakeLists.txt  package.xml
audio_common/audio_common/: audio_capturer_node.py  audio_filter_node.py  audio_player_node.py  music_node.py  tts_node.py  utils.py
audio_common/include/audio_common/: audio_capturer_node.hpp  audio_player_node.hpp  music_node.hpp  tts_node.hpp  wave_file.hpp
audio_common/samples/: elevator.mp3.REMOVED.git-id
audio_common/src/: audio_capturer_main.cpp  audio_capturer_node.cpp  audio_player_main.cpp  audio_player_node.cpp  music_main.cpp  music_node.cpp  tts_main.cpp  tts_node.cpp  wave_file.cpp
audio_common/src/audio_common/: audio_capturer_node.cpp  audio_player_node.cpp  music_node.cpp  tts_node.cpp  wave_file.cpp
audio_common_msgs/: CMakeLists.txt  package.xml
audio_common_msgs/action/: TTS.action
audio_common_msgs/msg/: Audio.msg  AudioData.msg  AudioDataStamped.msg
audio_common_msgs/srv/: PlayAudio.srv
(+123 files in other folders)
